[workspace]
resolver = "2"
members = [ "crates/axumite","crates/jsglue"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/RedstoneWizard08/Wormhole"
homepage = "https://github.com/RedstoneWizard08/Wormhole"
authors = ["RedstoneWizard08"]
readme = "README.md"

[workspace.dependencies]
axum-core = "0.4.3"
futures-util = "0.3.30"
http = "1.1.0"
hyper-util = { version = "0.1.8", features = ["tokio"] }
hyper = { version = "1.4.1", features = ["client"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls"] }
async-trait = "0.1.82"
sha-1 = "0.10.1"
bytes = "1.7.2"
base64 = "0.22.1"
tokio = { version = "1.40.0", features = ["process", "rt"] }
anyhow = "1.0.89"
axum = { version = "0.7.5", features = ["macros"] }
cfg-if = "1.0.0"
ctrlc = "3.4.5"
derive_builder = "0.20.1"
http-body-util = "0.1.2"
include_dir = "0.7.4"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
once_cell = "1.19.0"
regex = "1.10.6"
tracing = "0.1.40"
tungstenite = { version = "0.24.0", features = ["rustls"] }
url = "2.5.2"

axumite = { version = "0", path = "./crates/axumite" }
